--- a/SC4DP2022_wpf/SC4DP2022_wpf/MainWindow.xaml
+++ b/SC4DP2022_wpf/SC4DP2022_wpf/MainWindow.xaml
@@ -1,12 +1,49 @@
 ﻿<Window x:Class="SC4DP2022_wpf.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SC4DP2022_wpf"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:local="clr-namespace:SC4DP2022_wpf"
+		mc:Ignorable="d"
+		Title="SC4 DatPacker 2022"
+		Height="450"
+		Width="405">
+	<Grid>
+		<Button x:Name="btn_Browse"
+				Content="Browse"
+				HorizontalAlignment="Left"
+				Margin="322,12,0,0"
+				VerticalAlignment="Top"
+				Click="btn_Browse_Click" />
+		<Button x:Name="btn_Pack"
+				Content="Pack"
+				HorizontalAlignment="Left"
+				Margin="114,299,0,0"
+				VerticalAlignment="Top"
+				Width="77" />
+		<Button x:Name="btn_Quit"
+				Content="Quit"
+				HorizontalAlignment="Left"
+				Margin="229,299,0,0"
+				VerticalAlignment="Top"
+				Width="77" />
+		<Label x:Name="label"
+			   Content="Destination Directory"
+			   HorizontalAlignment="Left"
+			   Margin="10,10,0,0"
+			   VerticalAlignment="Top" />
+		<TextBox x:Name="txt_CurrentDirectory"
+				 HorizontalAlignment="Left"
+				 Margin="137,14,0,0"
+				 Text="TextBox"
+				 TextWrapping="NoWrap"
+				 VerticalAlignment="Top"
+				 Width="169"
+				 TextAlignment="Right" />
+		<ListBox x:Name="listBox"
+				 Margin="28,75,0,158"
+				 HorizontalAlignment="Left"
+				 Width="354" />
 
-    </Grid>
+	</Grid>
 </Window>
