ui tweaks and renamed buttons

--- a/SC4DP2022_wpf/SC4DP2022_wpf/MainWindow.xaml
+++ b/SC4DP2022_wpf/SC4DP2022_wpf/MainWindow.xaml
@@ -6,45 +6,69 @@
 		xmlns:local="clr-namespace:SC4DP2022_wpf"
 		mc:Ignorable="d"
 		Title="SC4 DatPacker 2022"
-		Height="450"
-		Width="405">
-	<Grid>
-		<Button x:Name="btn_Browse"
-				Content="Browse"
+		Height="550"
+		Width="350">
+	<Grid HorizontalAlignment="Left"
+		  Width="350">
+		<Button x:Name="BrowseDestinationDirectory"
+				Content="  ...  "
 				HorizontalAlignment="Left"
-				Margin="322,12,0,0"
+				Margin="298,43,0,0"
 				VerticalAlignment="Top"
-				Click="btn_Browse_Click" />
+				Click="BrowseDestinationDirectory_Click"
+				Height="20" />
 		<Button x:Name="btn_Pack"
 				Content="Pack"
 				HorizontalAlignment="Left"
-				Margin="114,299,0,0"
+				Margin="43,456,0,0"
 				VerticalAlignment="Top"
 				Width="77" />
 		<Button x:Name="btn_Quit"
 				Content="Quit"
-				HorizontalAlignment="Left"
-				Margin="229,299,0,0"
+				HorizontalAlignment="Center"
+				Margin="0,451,0,0"
 				VerticalAlignment="Top"
-				Width="77" />
-		<Label x:Name="label"
+				Width="78" />
+		<Label x:Name="lbl_DestinationDirectory"
 			   Content="Destination Directory"
 			   HorizontalAlignment="Left"
-			   Margin="10,10,0,0"
+			   Margin="10,40,0,0"
 			   VerticalAlignment="Top" />
-		<TextBox x:Name="txt_CurrentDirectory"
+		<TextBox x:Name="DestinationDirectory"
 				 HorizontalAlignment="Left"
-				 Margin="137,14,0,0"
-				 Text="TextBox"
+				 Margin="132,44,0,0"
 				 TextWrapping="NoWrap"
 				 VerticalAlignment="Top"
-				 Width="169"
+				 Width="161"
 				 TextAlignment="Right" />
 		<ListBox x:Name="list_Folders"
-				 Margin="28,75,0,158"
-				 HorizontalAlignment="Left"
-				 Width="354"
+				 Margin="0,80,0,111"
+				 HorizontalAlignment="Center"
+				 Width="330"
 				 SelectionMode="Multiple" />
+		<TextBlock Margin="62,481,70,36">
+			<Hyperlink NavigateUri="https://github.com/noah-severyn/SC4DatPacker2022/releases/latest">Get most recent version</Hyperlink>
+		</TextBlock>
+		<Button x:Name="BrowseSourceDirectory"
+				Content="  ...  "
+				HorizontalAlignment="Left"
+				Margin="298,13,0,0"
+				VerticalAlignment="Top"
+				Click="BrowseSourceDirectory_Click"
+				Height="20" />
+		<Label x:Name="lbl_SourceDirectory"
+			   Content="Source Directory"
+			   HorizontalAlignment="Left"
+			   Margin="10,10,0,0"
+			   VerticalAlignment="Top"
+			   Width="117" />
+		<TextBox x:Name="SourceDirectory"
+				 HorizontalAlignment="Left"
+				 Margin="132,14,0,0"
+				 TextWrapping="NoWrap"
+				 VerticalAlignment="Top"
+				 Width="161"
+				 TextAlignment="Right" />
 
 	</Grid>
 </Window>
