--- a/SC4DP2022_wpf/SC4DP2022_wpf/MainWindow.xaml
+++ b/SC4DP2022_wpf/SC4DP2022_wpf/MainWindow.xaml
@@ -7,68 +7,70 @@
 		mc:Ignorable="d"
 		Title="SC4 DatPacker 2022"
 		Height="550"
-		Width="350">
-	<Grid HorizontalAlignment="Left"
-		  Width="350">
-		<Button x:Name="BrowseDestinationDirectory"
-				Content="  ...  "
-				HorizontalAlignment="Left"
-				Margin="298,43,0,0"
-				VerticalAlignment="Top"
-				Click="BrowseDestinationDirectory_Click"
-				Height="20" />
-		<Button x:Name="btn_Pack"
-				Content="Pack"
-				HorizontalAlignment="Left"
-				Margin="43,456,0,0"
-				VerticalAlignment="Top"
-				Width="77" />
-		<Button x:Name="btn_Quit"
-				Content="Quit"
-				HorizontalAlignment="Center"
-				Margin="0,451,0,0"
-				VerticalAlignment="Top"
-				Width="78" />
-		<Label x:Name="lbl_DestinationDirectory"
-			   Content="Destination Directory"
-			   HorizontalAlignment="Left"
-			   Margin="10,40,0,0"
-			   VerticalAlignment="Top" />
-		<TextBox x:Name="DestinationDirectory"
-				 HorizontalAlignment="Left"
-				 Margin="132,44,0,0"
-				 TextWrapping="NoWrap"
-				 VerticalAlignment="Top"
-				 Width="161"
-				 TextAlignment="Right" />
-		<ListBox x:Name="list_Folders"
-				 Margin="0,80,0,111"
-				 HorizontalAlignment="Center"
-				 Width="330"
-				 SelectionMode="Multiple" />
-		<TextBlock Margin="62,481,70,36">
-			<Hyperlink NavigateUri="https://github.com/noah-severyn/SC4DatPacker2022/releases/latest">Get most recent version</Hyperlink>
-		</TextBlock>
-		<Button x:Name="BrowseSourceDirectory"
-				Content="  ...  "
-				HorizontalAlignment="Left"
-				Margin="298,13,0,0"
-				VerticalAlignment="Top"
-				Click="BrowseSourceDirectory_Click"
-				Height="20" />
+		Width="400"
+		MinHeight="300"
+		MinWidth="250">
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="30" />
+			<RowDefinition Height="30" />
+			<RowDefinition />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+
 		<Label x:Name="lbl_SourceDirectory"
+			   Grid.Row="0"
 			   Content="Source Directory"
 			   HorizontalAlignment="Left"
-			   Margin="10,10,0,0"
-			   VerticalAlignment="Top"
-			   Width="117" />
+			   Margin="10,0,0,0"
+			   VerticalAlignment="Center"
+			   Width="120"
+			   Height="26" />
 		<TextBox x:Name="SourceDirectory"
-				 HorizontalAlignment="Left"
-				 Margin="132,14,0,0"
+				 Grid.Row="0"
+				 Margin="132,4,40,0"
 				 TextWrapping="NoWrap"
 				 VerticalAlignment="Top"
-				 Width="161"
-				 TextAlignment="Right" />
-
+				 TextAlignment="Right"
+				 Height="18" />
+		<Button x:Name="BrowseSourceDirectory"
+				Grid.Row="0"
+				Width="25"
+				Height="18"
+				Content="  ...  "
+				Margin="0,6,10,0"
+				HorizontalAlignment="Right"
+				VerticalAlignment="Top"
+				Click="BrowseSourceDirectory_Click" />
+		<Label x:Name="lbl_DestinationDirectory"
+			   Grid.Row="1"
+			   Content="Destination Directory"
+			   Margin="10,0,0,0"
+			   HorizontalAlignment="Left"
+			   VerticalAlignment="Center"
+			   Height="26"
+			   Width="122" />
+		<TextBox x:Name="DestinationDirectory"
+				 Grid.Row="1"
+				 Margin="132,0,40,0"
+				 TextWrapping="NoWrap"
+				 VerticalAlignment="Center"
+				 TextAlignment="Right"
+				 Height="18" />
+		<Button x:Name="BrowseDestinationDirectory"
+				Grid.Row="1"
+				Width="25"
+				Height="18"
+				Content="  ...  "
+				Margin="0,6,10,0"
+				HorizontalAlignment="Right"
+				VerticalAlignment="Top"
+				Click="BrowseDestinationDirectory_Click" />
+		<ListBox x:Name="FolderList"
+				 Grid.Row="2"
+				 Margin="10,6,10,0"
+				 VerticalAlignment="Top"
+				 SelectionMode="Multiple"
+				 Height="221" />
 	</Grid>
 </Window>
